# peak-flops

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  setup_repo.sh
.ipynb_checkpoints/: Optimization-checkpoint.ipynb
experiments/: readme.md
experiments/01_sample_tests/: CMakeLists.txt  cmake_install.cmake  readme.md  test_compile.cu
experiments/01_sample_tests/data/: vecadd_results.csv
experiments/01_sample_tests/scripts/: parse_results.py
experiments/01_vector_addition/: CMakeLists.txt  test_compile.cu
experiments/01_vector_addition/data/: vecadd_results.csv
experiments/01_vector_addition/scripts/: parse_results.py
experiments/02_axpy/: CMakeLists.txt  axpy.cu
experiments/02_axpy/data/: axpy_results.csv
experiments/02_axpy/scripts/: parse_results.py
notes/: key_notes.md  nvidia_3_month_study_plan.md  readme.md
notes/.ipynb_checkpoints/: key_notes-checkpoint.md
notes/calculus/: Optimization.ipynb  calculus.ipynb  calculus_assignment.ipynb
notes/calculus/.ipynb_checkpoints/: calculus-checkpoint.ipynb
notes/linear_algebra/: linear_algebra.ipynb
notes/linear_algebra/.ipynb_checkpoints/: linear_algebra-checkpoint.ipynb
scripts/: monitor_gpu.sh
